--- a/Front/hbb/package.json
+++ b/Front/hbb/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@icon-park/react": "^1.4.2",
+    "autoprefixer": "^9.8.8",
     "next": "14.0.3",
+    "postcss": "^7.0.39",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
